# strava-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SKILL.md  install-skill.sh  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
site/: index.html
src/strava_cli/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  decorators.py  exceptions.py  output.py
src/strava_cli/commands/: __init__.py  activities.py  athlete.py  auth.py  clubs.py  context.py  efforts.py  gear.py  routes.py  segments.py  upload.py
tests/: __init__.py  conftest.py  test_cli.py
